# pickc

./: README.md  package.json  pnpm-lock.yaml  uno.config.ts  vite.config.ts
src/: main.ts  router.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmds.rs  main.rs  tray.rs
src-tauri/src/core/: handle.rs  mod.rs  pick_color.rs  utils.rs  window_manager.rs
src/components/: Greet.vue  Select.vue
src/pages/: home.vue  picker.vue
src/state/: usePickHistory.ts
