[package]
name = "pickc"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [
  "global-shortcut",
  "shell-open",
  "system-tray",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
window-shadows = { git = "https://github.com/tauri-apps/window-shadows" }
once_cell = "1.17.0"
anyhow = "1.0"
screenshots ="0.8.7"
parking_lot = "0.12.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
